OpenSearchServer
http://www.open-search-server.com
-----------------------
CHANGE LOG

All new features and bugs are described here:
http://sourceforge.net/p/opensearchserve/feature-request/
http://sourceforge.net/p/opensearchserve/bug-report/

OpenSearchServer 1.3.1

New features:
- 240 Several HTML parser configuration per index

Bug fixes:
- 157: NullPointerException while deleting documents from web crawler
- 156: Cannot forcefully unlock a NativeFSLock error
- 155: Trigger name cannot be null error when clicking optimize
- 153: Failed replication from Windows to Linux because of file separator

OpenSearchServer 1.3

New features:
- 238: Job called when crawl session ends
- 237: Transaction isolation level should editable
- 236: Default value in the Classifier
- 235: Named entity recognition
- 234: Free text submission to MoreLikeThis query
- 233: Add deletion support in XML indexation
- 232: FTP feed XML task
- 231: Autocompletion API
- 230: Dropbox indexation
- 228: Group all token filter
- 227: Squared Geographical Filter
- 226: Json Path filter
- 225: Degrees to radians converter
- 224: A delete all feature
- 223: A flush crawl cache scheduler task
- 222: Disable Meta NoIndex on HTML parser
- 221: Dailymotion and Vimeo API support
- 220: Youtube API support
- 218: URL and FILE database scheduler task
- 217: Tag boost in HTML parser	
- 216: A number format filter	
- 214: JBIG2 format support for PDF text extraction
- 210: Classifier feature
- 209: SOAP WebService
- 206: Image Parser with OCR
- 204: XSL support on XML upload
- 3510432: Support of Arabic language
- 202: OCR Integration
- 197: Adding regular expression capture in parser	
- 187: Jsoup HTML parser
- 179: Consecutive duplicate characters filter
- 177: Phonetic filters
- 176: A filter to extract the domain information
- 175: Multiple OpenSearchServer instances on one Tomcat server
- 174: Adding NumDeletedDocs in Runtime/Index
- 166: Upgrade to ZK 5.0.10
- 162: Upgrade Tomcat to version 6.0.35